Fix to filter and modal

--- a/src/assets/beast-data.json
+++ b/src/assets/beast-data.json
@@ -115,7 +115,7 @@
     "_id": "15",
     "title": "Sick Triceratops (Jurassic Park)",
     "imageUrl": "https://www.slashfilm.com/img/gallery/why-was-the-triceratops-sick-in-jurassic-park/intro-1629910029.jpg",
-    "description": "Clever beast . . . ",
+    "description": "Not so clever beast . . . ",
     "keyword": "dinosaur",
     "horns": 3
   }
